拆分理念，库，语法

--- a/Csharp12学习笔记.csproj
+++ b/Csharp12学习笔记.csproj
@@ -6,5 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <TieredPGO>true</TieredPGO>
-  </PropertyGroup> 
+  </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="API笔记\" />
+  </ItemGroup> 
 </Project>
