--- a/Csharp12学习笔记.csproj
+++ b/Csharp12学习笔记.csproj
@@ -6,5 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <TieredPGO>true</TieredPGO>
-  </PropertyGroup> 
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup> 
 </Project>
